--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background: linear-gradient(rgba(161, 132, 95, 0.968), white);
+  background: linear-gradient(rgba(161, 132, 95, 0.968), white 60%);
 }
 .n1 {
   display: flex;
@@ -194,30 +194,54 @@ body {
 }
 
 #Contact {
-  margin-top: 100px;
   padding-top: 90px;
   font-size: 30px;
 }
 
-.contact {
-  /* margin-left: 200px; */
-  /* position: relative; */
+/* .contact {
+    margin-left: 200px;
+  position: relative;
   width: 100%;
   height: 100%;
   background: url(../IMG/toko_kopi.jpg);
   background-repeat: no-repeat;
   background-size: 90%;
   background-position: right;
-}
+} */
 
-.tes::before {
+/* .tes::before {
   content: "";
   background-image: url(../IMG/tinta.jpg);
   width: 100%;
   height: 100%;
   background-size: 90%;
   position: absolute;
-  /* top: 0;
-  left: 0; */
+  top: 0;
+  left: 0;
   mix-blend-mode: screen;
+} */
+
+.contact {
+  width: 100%;
+  height: 700px;
+  background: url(../IMG/kopi.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+}
+
+.contact::before {
+  content: "";
+  width: 100%;
+  height: 700px;
+  background-color: blue;
+  position: absolute;
+  background: url(../IMG/tinta.jpg);
+  background-repeat: no-repeat;
+  mix-blend-mode: screen;
+  background-size: cover;
+}
+
+.C1 {
+  position: absolute;
 }
