--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url(../IMG/toko_kopi.jpg);
+  background: url(IMG/toko_kopi.jpg);
   background-repeat: no-repeat;
   background-size: 90%;
   background-position: right;
@@ -211,7 +211,7 @@ body {
 
 /* .tes::before {
   content: "";
-  background-image: url(../IMG/tinta.jpg);
+  background-image: url(IMG/tinta.jpg);
   width: 100%;
   height: 100%;
   background-size: 90%;
@@ -224,7 +224,7 @@ body {
 .contact {
   width: 100%;
   height: 700px;
-  background: url(../IMG/kopi.png);
+  background: url(IMG/kopi.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
@@ -236,7 +236,7 @@ body {
   height: 700px;
   background-color: blue;
   position: absolute;
-  background: url(../IMG/tinta.jpg);
+  background: url(IMG/tinta.jpg);
   background-repeat: no-repeat;
   mix-blend-mode: screen;
   background-size: cover;
